--- a/.env
+++ b/.env
@@ -4,6 +4,8 @@ APP_KEY=base64:7VOQrgHtO1A2F696kEgelPB+ZnuQbfY56OGlD5drsZg=
 APP_DEBUG=true
 APP_URL=http://movilidad.test
 
+SISTEMAS_URL=http://sistemas.uts.edu.co/
+
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
