--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ APP_DEBUG=true
 APP_URL=http://movilidad.test
 
 SISTEMAS_URL=http://sistemas.uts.edu.co/
+ROL_MOVILIDAD=2
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
